# internal/components/advertisements/entities/advertiser.go
@@ -2,6 +2,7 @@ package entities
 
 import (
 	"github.com/a1ta1r/Credit-Portfolio/internal/components/roles"
+	"golang.org/x/crypto/bcrypt"
 	"time"
 )
 
@@ -9,7 +10,6 @@ type Advertiser struct {
 	ID          uint       `gorm:"primary_key" json:"id"`
 	CreatedAt   time.Time  `json:"createdAt"`
 	UpdatedAt   time.Time  `json:"updatedAt"`
-	DeletedAt   time.Time  `json:"deletedAt"`
 	Username    string     `json:"username" gorm:"type:varchar(100);unique_index"`
 	Email       string     `json:"email" gorm:"type:varchar(100);unique_index"`
 	ContactInfo string     `json:"contactInfo"`
@@ -19,19 +19,18 @@ type Advertiser struct {
 	IsActive    bool       `json:"IsActive"`
 }
 
-func CreateAdvertiser(username string, email string, password string) Advertiser {
-	return Advertiser{
-		Username: username,
-		Email:    email,
-		Password: password,
-		Role:     roles.Ads,
-	}
-}
-
 func (adv Advertiser) Disable() {
 	adv.IsActive = false
 }
 
 func (adv Advertiser) Activate() {
 	adv.IsActive = true
+}
+
+func (adv Advertiser) GetHashedPassword() string {
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(adv.Password), bcrypt.DefaultCost)
+	if err != nil {
+		panic(err)
+	}
+	return string(hashedPassword)
 }
