# internal/components/advertisements/entities/advertisment.go
@@ -6,7 +6,6 @@ type Advertisement struct {
 	ID           uint       `gorm:"primary_key" json:"id"`
 	CreatedAt    time.Time  `json:"createdAt"`
 	UpdatedAt    time.Time  `json:"updatedAt"`
-	DeletedAt    time.Time  `json:"deletedAt"`
 	Advertiser   Advertiser `json:"-"`
 	AdvertiserID uint       `json:"advertiserId"`
 	IsActive     bool       `json:"IsActive"`
